--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>test000</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
